add new feature

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Chirag's Company</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, enim fugiat fuga asperiores animi assumenda ratione nisi nihil labore aut reprehenderit, nesciunt atque inventore iure facere distinctio eligendi, cumque suscipit.</p>
+
+    <pre>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam omnis fugit vel. Veritatis dolores, commodi dolore eligendi consequatur voluptatem obcaecati et error laborum ea tempore quas nisi laboriosam quidem sint?</pre>
     
 </body>
 </html>
